Fix toast spacing issues
Fixed the toast spacing issues

--- a/app/assets/stylesheets/framework/variables.scss
+++ b/app/assets/stylesheets/framework/variables.scss
@@ -337,6 +337,7 @@ $tooltip-font-size: 12px;
 $gl-padding-4: 4px;
 $gl-padding-8: 8px;
 $gl-padding-12: 12px;
+$gl-padding-14: 14px;
 $gl-padding: 16px;
 $gl-padding-24: 24px;
 $gl-padding-32: 32px;
@@ -507,7 +508,6 @@ $toast-height: 48px;
 $toast-max-width: 586px;
 $toast-padding-right: 42px;
 $toast-default-margin: 8px;
-$toast-action-margin-left: 16px;
 $toast-background-opacity: 0.95;
 
 /*
